# calc-dmg-lib

./: CMakeLists.txt  README.md  package.json
cmake/: calcdmglibConfig.cmake.in
include/calcdmglib/: calcdmglib.h  champion.h
include/calcdmglib/champions/: annie.h
include/calcdmglib/spells/: spell.h
include/calcdmglib/spells/annie/: e.h  q.h  r.h  w.h
include/calcdmglib/spells/varus/: e.h  q.h  r.h  stacks.h  w.h
include/calcdmglib/spells/yorick/: q.h  r.h  w.h
